@@ -1,5 +1,15 @@
--Xms1g
--Xmx4g
+-Xms2g
+-Xmx8g
+-XX:MetaspaceSize=256m
+-XX:MaxMetaspaceSize=512m
+-XX:+UseCompactObjectHeaders
 -XX:+UseZGC
 -XX:+ZGenerational
 -XX:+UseStringDeduplication
+-XX:+TieredCompilation
+-XX:TieredStopAtLevel=4
+-XX:CompileThreshold=10000
+-Djava.util.concurrent.ForkJoinPool.common.parallelism=24
+-Dfile.encoding=UTF-8
+--enable-preview
+-Dmaven.build.cache.enabled=true
